Rename heat logical_resource_id to resource_name
This attribute has been renamed in the heat API.

Fixes bug: 1216903

Change-Id: Ia29c0d1a7af8988cf69094bdfbdd7f439078dc7e

--- a/openstack_dashboard/dashboards/project/stacks/templates/stacks/_resource_info.html
+++ b/openstack_dashboard/dashboards/project/stacks/templates/stacks/_resource_info.html
@@ -1,4 +1,4 @@
-<h3>{{ resource.logical_resource_id }}</h3>
+<h3>{{ resource.resource_name }}</h3>
 
 {% if resource.resource_status == 'CREATE_FAILED' %}
 <p class="error">{{ resource.resource_status_desc }}</p>
