--- a/openstack_dashboard/dashboards/project/stacks/templates/stacks/_resource_overview.html
+++ b/openstack_dashboard/dashboards/project/stacks/templates/stacks/_resource_overview.html
@@ -7,7 +7,7 @@
   <hr class="header_rule">
   <dl>
     <dt>{% trans "Stack Resource ID" %}</dt>
-    <dd>{{ resource.logical_resource_id }}</dd>
+    <dd>{{ resource.resource_name }}</dd>
   </dl>
   <dl>
     <dt>{% trans "Resource ID" %}</dt>
