--- a/openstack_dashboard/dashboards/project/stacks/templates/stacks/_detail_overview.html
+++ b/openstack_dashboard/dashboards/project/stacks/templates/stacks/_detail_overview.html
@@ -20,9 +20,9 @@
   <hr class="header_rule">
   <dl>
     <dt>{% trans "Created" %}</dt>
-    <dd>{{ stack.creation_time|parse_isotime|timesince }}</dd>
+    <dd>{{ stack.creation_time|parse_isotime|timesince_or_never }}</dd>
     <dt>{% trans "Last Updated" %}</dt>
-    <dd>{{ stack.updated_time|parse_isotime|timesince }}</dd>
+    <dd>{{ stack.updated_time|parse_isotime|timesince_or_never }}</dd>
     <dt>{% trans "Status" %}</dt>
     <dd>{{ stack.stack_status|title }}: {{ stack.stack_status_reason }}</dd>
   </dl>
