Update Twitter Bootstrap to version 3
Updated to bootstrap 3.2.0
back to v3.1.1
fix base-line-height variable
Revamped grid system
Replaced help-inline with help-block
Change .control-group to .form-group
Add column widths to horizontal form labels and .controls, remove .controls class
Datepicker form fix
Add btn-default to btn elements with no other color
Topbar switcher fix
Rename button sizes
Replace alert-error with alert-danger
Removed alert-block
Alerts fixing
Updated LinkAction and Action table actions to define icon, replaced btn-default icon with glyphicon
Replaced icons with glyphicons, removed btn-icon styling from horizon.scss
change Button Icons text in customizing docs
Fixed table header
Fix page_header h2 margin
Nav accordion fix
Tables fix
Modal fixes
added form-control class to input and selects
Forms fixes
Workflow modal fix
Fix quota bar
updated customizing docs
removed unused styling from horizon.scss
make datepicker form inline
fix table filter styling
added btn-danger to terminate instances button
fixed loading spinner
form fields and validations
Created bootstrap_form_field filter and template to render bootstrap forms properly
Style up the datepicker
Fixed failing test cases

Implements: blueprint bootstrap-update

Change-Id: Ic826849be1af7fc6bf06f97dd7a60fc54b862148

--- a/openstack_dashboard/dashboards/project/stacks/templates/stacks/_detail_overview.html
+++ b/openstack_dashboard/dashboards/project/stacks/templates/stacks/_detail_overview.html
@@ -2,7 +2,7 @@
 
 <h3>{% trans "Stack Overview" %}</h3>
 
-<div class="info row-fluid detail">
+<div class="info row detail">
   <h4>{% trans "Info" %}</h4>
   <hr class="header_rule">
   <dl>
@@ -15,7 +15,7 @@
   </dl>
 </div>
 
-<div class="status row-fluid detail">
+<div class="status row detail">
   <h4>{% trans "Status" %}</h4>
   <hr class="header_rule">
   <dl>
@@ -28,7 +28,7 @@
   </dl>
 </div>
 
-<div class="outputs row-fluid detail">
+<div class="outputs row detail">
   <h4>{% trans "Outputs" %}</h4>
   <hr class="header_rule">
   <dl>
@@ -42,7 +42,7 @@
   </dl>
 </div>
 
-<div class="parameters row-fluid detail">
+<div class="parameters row detail">
   <h4>{% trans "Stack Parameters" %}</h4>
   <hr class="header_rule">
   <dl>
@@ -53,7 +53,7 @@
   </dl>
 </div>
 
-<div class="launch row-fluid detail">
+<div class="launch row detail">
   <h4>{% trans "Launch Parameters" %}</h4>
   <hr class="header_rule">
   <dl>
