--- a/openstack_dashboard/dashboards/project/stacks/templates/stacks/_resource_overview.html
+++ b/openstack_dashboard/dashboards/project/stacks/templates/stacks/_resource_overview.html
@@ -2,7 +2,7 @@
 
 <h3>{% trans "Resource Overview" %}</h3>
 
-<div class="info row-fluid detail">
+<div class="info row detail">
   <h4>{% trans "Info" %}</h4>
   <hr class="header_rule">
   <dl>
@@ -27,7 +27,7 @@
   </dl>
 </div>
 
-<div class="status row-fluid detail">
+<div class="status row detail">
   <h4>{% trans "Status" %}</h4>
   <hr class="header_rule">
   <dl>
@@ -38,7 +38,7 @@
   </dl>
 </div>
 
-<div class="status row-fluid detail">
+<div class="status row detail">
   <h4>{% trans "Resource Metadata" %}</h4>
   <hr class="header_rule">
   <pre>{{ metadata }}
