show correct link to compute instances in stack resource overview tab
There are two related fixes in the stacks resource overview page.
First, any resource types for which horizon does not have a link for
were getting a URL of "None" in the uuid field, and with this
change the link is suppressed if it is None. The second part involves
adding compute resources to the resource mappings, so that the uuid
field for those links to the instance detail page.

Change-Id: Ib8d51b49ac51092a3d7db6d889f4427167e5adb0
Closes-Bug: 1322162

--- a/openstack_dashboard/dashboards/project/stacks/templates/stacks/_resource_overview.html
+++ b/openstack_dashboard/dashboards/project/stacks/templates/stacks/_resource_overview.html
@@ -12,9 +12,13 @@
   <dl>
     <dt>{% trans "Resource ID" %}</dt>
     <dd>
+      {% if resource_url %}
       <a href="{{ resource_url }}">
           {{ resource.physical_resource_id }}
       </a>
+      {% else %}
+      {{ resource.physical_resource_id }}
+      {% endif %}
     </dd>
   </dl>
   <dl>
