--- a/openstack_dashboard/dashboards/project/stacks/templates/stacks/_resource_overview.html
+++ b/openstack_dashboard/dashboards/project/stacks/templates/stacks/_resource_overview.html
@@ -38,7 +38,9 @@
     <dt>{% trans "Last Updated" %}</dt>
     <dd>{{ resource.updated_time|parse_isotime|timesince_or_never }}</dd>
     <dt>{% trans "Status" %}</dt>
-    <dd>{{ resource.resource_status|title|replace_underscores }}: {{ resource.resource_status_reason }}</dd>
+    <dd>
+      {% blocktrans with resource_status=resource.resource_status|title|replace_underscores resource_status_reason=resource.resource_status_reason % }{{ resource_status }}: {{ resource_status_reason }}{% endblocktrans %}
+    </dd>
   </dl>
 </div>
 
