Create titles without concatenation
Several panels use the template filter "add" to concatenate data
and translatable text, for example
title=_("Volume Details: ")|add:volume.name|default:_("Volume Details:")

These need to be updated to use string formatting.  This is needed
because it's not clear when looking at the translations if any text
follows the translatable segment.  Dict based substitution has been
used to further clarify the messages for translators.

Change-Id: I54d07233d2003904468ef317c352126eb6bf5f70
Closes-bug: #1394573

--- a/openstack_dashboard/dashboards/project/stacks/templates/stacks/detail.html
+++ b/openstack_dashboard/dashboards/project/stacks/templates/stacks/detail.html
@@ -3,7 +3,7 @@
 {% block title %}{% trans "Stack Detail" %}{% endblock %}
 
 {% block page_header %}
-  {% include "horizon/common/_page_header.html" with title=_("Stack Detail: ")|add:stack.stack_name %}
+  {% include "horizon/common/_page_header.html" with title=page_title %}
 {% endblock page_header %}
 
 {% block main %}
