--- a/openstack_dashboard/dashboards/project/stacks/templates/stacks/detail.html
+++ b/openstack_dashboard/dashboards/project/stacks/templates/stacks/detail.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load i18n sizeformat %}
-{% block title %}{% trans "Stack Detail" %}{% endblock %}
+{% block title %}{% trans "Stack Details" %}{% endblock %}
 
 {% block page_header %}
   {% include "horizon/common/_page_header.html" with title=page_title %}
