Add unittests for template generator angular
The following changes have been made.
 - Test cases for common components and individual resources.
 - Setup karma + jasmine test environment.
 - Setup eslint environment and rules.
 - Code style adjustment to satisfiy eslint rules.

Change-Id: Icb3e48be11beaebc4e410644c62e0df86b345207

--- a/heat_dashboard/static/dashboard/project/heat_dashboard/template_generator/templates/depends_on.html
+++ b/heat_dashboard/static/dashboard/project/heat_dashboard/template_generator/templates/depends_on.html
@@ -9,8 +9,10 @@
     </md-icon>
 </md-button>
 
-<md-input-container class="md-block" flex-gt-xs ng-repeat="node in nodes._data" ng-if="node.id !== selected.id">
-    <md-checkbox ng-checked="exists(node.id, dependson)" ng-click="toggle(node.id, dependson)" aria-label="node.label">
-     {{ node.label }}
-    </md-checkbox>
-</md-input-container>
+<div class="div-scroll">
+    <md-input-container class="md-block" flex-gt-xs ng-repeat="node in nodes._data" ng-if="node.id !== selected.id">
+        <md-checkbox ng-checked="exists(node.id, dependson)" ng-click="toggle(node.id, dependson)" aria-label="node.label">
+         {{ node.label }}
+        </md-checkbox>
+    </md-input-container>
+</div>
