--- a/heat_dashboard/content/template_generator/templates/template_generator/index.html
+++ b/heat_dashboard/content/template_generator/templates/template_generator/index.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block main %}
-<div ng-show="loading" class="col-xs-12 load-block" ng-controller="horizon.dashboard.project.heat_dashboard.template_generator.LoadingCtrl">
+<div ng-show="loading" class="col-xs-12 load-block" ng-controller="horizon.dashboard.project.heat_dashboard.template_generator.LoadingController">
     <md-icon md-svg-src="{$ basePath $}css/img/icons/spinner.svg" class="spinner"></md-icon>
 </div>
 <div ng-cloak>
@@ -19,7 +19,7 @@
             <span flex></span>
 
             <div class="col-sm-11" style="height:80px;">
-                <div ng-controller="horizon.dashboard.project.heat_dashboard.template_generator.AgentCtrl" style="display:inline-block">
+                <div ng-controller="horizon.dashboard.project.heat_dashboard.template_generator.AgentController" style="display:inline-block">
                     <md-input-container class="md-block" flex-gt-xs>
                         <label>Template Version</label>
                         <md-select ng-model="template_version" ng-change="update_template_version(template_version)">
@@ -29,16 +29,16 @@
                         </md-select>
                     </md-input-container>
                 </div>
-                <div ng-controller="horizon.dashboard.project.heat_dashboard.template_generator.TempModalCtrl" style="display:inline-block">
+                <div ng-controller="horizon.dashboard.project.heat_dashboard.template_generator.TempModalController" style="display:inline-block">
                     <md-tooltip style="font-size:12px !important;" md-direction="top">Generate Template</md-tooltip>
                     <md-button class="md-fab md-mini md-primary" ng-click="open()" aria-label="Generate Template">
                         <md-icon md-svg-src="{$ basePath $}css/img/icons/file-text-o.svg"></md-icon>
                     </md-button>
                 </div>
-                <div class="md-menu" ng-controller="horizon.dashboard.project.heat_dashboard.template_generator.DraftMenuCtrl" style="display:inline-block">
+                <div class="md-menu" ng-controller="horizon.dashboard.project.heat_dashboard.template_generator.DraftMenuController" style="display:inline-block">
                     <md-tooltip style="font-size:12px !important;" md-direction="top">Manage Drafts</md-tooltip>
                     <md-menu>
-                        <md-button class="md-fab md-mini" ng-click="openMenu($mdOpenMenu, $event)" aria-label="Manage Drafts">
+                        <md-button class="md-fab md-mini" ng-click="openMenu($mdMenu, $event)" aria-label="Manage Drafts">
                             <md-icon md-svg-src="{$ basePath $}css/img/icons/floppy-o.svg"></md-icon>
                         </md-button>
                         <md-menu-content width="4" ng-mouseleave="closeMenu()">
@@ -66,7 +66,7 @@
                           </md-menu-content>
                     </md-menu>
                 </div>
-                <div ng-controller="horizon.dashboard.project.heat_dashboard.template_generator.ClearCanvasCtrl" style="display:inline-block">
+                <div ng-controller="horizon.dashboard.project.heat_dashboard.template_generator.ClearCanvasController" style="display:inline-block">
                     <md-tooltip style="font-size:12px !important;" md-direction="top">Clear Canvas</md-tooltip>
                     <md-button ng-click="clear_canvas()" class="md-fab md-mini md-warn"  aria-label="clear canvas">
                         <md-icon md-svg-src="{$ basePath $}css/img/icons/trash.svg"></md-icon>
@@ -82,7 +82,7 @@
             <span flex></span>
 
             <!-- Icon Drag sidebar -->
-            <div class="col-sm-11" style="text-align:center" ng-controller="horizon.dashboard.project.heat_dashboard.template_generator.IconCtrl">
+            <div class="col-sm-11" style="text-align:center" ng-controller="horizon.dashboard.project.heat_dashboard.template_generator.IconController">
                <div draggable ng-repeat="(reskey, resobj) in resource_types" class="os-resource" draggable="true" id="{$ reskey $}" ng-if="admin || !resource_admin[reskey]">
                    <md-tooltip md-direction="top" style="font-size:12px !important;">{$ resobj.name $}</md-tooltip>
                    <md-icon style="height: 36px; width: 36px;" md-svg-src="{$ basePath $}js/resources/{$ reskey|lowercase $}/{$ reskey|lowercase $}.svg"></md-icon>
@@ -95,7 +95,7 @@
             <span flex></span>
              <!-- Drop Canvas -->
             <div class="col-sm-11" style="margin-bottom: 10%; min-height:400px; height: 500px">
-                <div ng-controller="horizon.dashboard.project.heat_dashboard.template_generator.VisCtrl" id="canvas_area" droppable>
+                <div ng-controller="horizon.dashboard.project.heat_dashboard.template_generator.VisController" id="canvas_area" droppable>
                     <vis-network component="hotnetwork" data="data" options="options" events="events">
                     </vis-network>
                 </div>
@@ -104,17 +104,17 @@
             <!-- End Drop Canvas -->
 
         <!-- Node Modal -->
-        <div ng-controller="horizon.dashboard.project.heat_dashboard.template_generator.FormModalCtrl"  class="md-padding" id="popupContainer" ng-cloak>
+        <div ng-controller="horizon.dashboard.project.heat_dashboard.template_generator.FormModalController"  class="md-padding" id="popupContainer" ng-cloak>
         </div>
         <!-- End Node Modal -->
 
         <!-- Edge Modal -->
-        <div ng-controller="horizon.dashboard.project.heat_dashboard.template_generator.EdgeFormModalCtrl"  class="md-padding" id="popupEdgeContainer" ng-cloak>
+        <div ng-controller="horizon.dashboard.project.heat_dashboard.template_generator.EdgeFormModalController"  class="md-padding" id="popupEdgeContainer" ng-cloak>
         </div>
         <!-- End Edge Modal -->
 
         <!-- Load Draft Modal -->
-        <div ng-controller="horizon.dashboard.project.heat_dashboard.template_generator.DraftModalCtrl"  class="md-padding" ng-cloak>
+        <div ng-controller="horizon.dashboard.project.heat_dashboard.template_generator.DraftModalController"  class="md-padding" ng-cloak>
         </div>
         <!-- End Load Draft Modal -->
 </div>
