--- a/heat_dashboard/static/dashboard/project/heat_dashboard/template_generator/templates/modal_template.html
+++ b/heat_dashboard/static/dashboard/project/heat_dashboard/template_generator/templates/modal_template.html
@@ -9,20 +9,18 @@
             </md-button>
             </div>
         </md-toolbar>
+
         <md-dialog-content>
             <md-content layout-gt-sm="row" layout-padding>
-                <div>
-                    <div ng-if="all_saved">
-                        <md-input-container class="md-block">
-                                <label>{$ template.title $}</label>
-                                <textarea ng-model="template.content" md-maxlength="65530" rows="35" cols="150" md-select-on-focus>
-                                </textarea>
-                        </md-input-container>
-                    </div>
-                    <div ng-if="all_saved == false " md-colors="{color: 'default-red-A200'}" >
-                        <span >{$ template.content $}</span>
-                    </div>
-                </div>
+                <section>
+                    <md-subheader ng-if="all_saved == false" class="md-warn">{$ warning | translate $}</md-subheader>
+
+                    <md-input-container class="md-block">
+                            <label>{$ template.title $}</label>
+                            <textarea ng-model="template.content" md-maxlength="65530" rows="35" cols="150" md-select-on-focus>
+                            </textarea>
+                    </md-input-container>
+                </section>
           </md-content>
         </md-dialog-content>
 
