Submit generated template file directly
Redirect from the template generation page to stack list page
 and open stack creation modal directly.
Referenced files of the template will be stored in a hidden
 field as a json string.

Change-Id: I58e2ec4e215670463504305a01ed33a6766067f6

--- a/heat_dashboard/content/stacks/templates/stacks/_select_template.html
+++ b/heat_dashboard/content/stacks/templates/stacks/_select_template.html
@@ -4,4 +4,15 @@
 {% block modal-body-right %}
   <h3>{% trans "Description:" %}</h3>
   <p>{% trans "Use one of the available template source options to specify the template to be used in creating this stack." %}</p>
+
+  <script type="text/javascript">
+      if (window.sessionStorage.generated == 'true'){
+          $("#id_template_data").val(window.sessionStorage.getItem("template"));
+          $("#id_referenced_files").val(window.sessionStorage.getItem("files"));
+      }
+      window.sessionStorage.setItem('generated', false);
+      // window.sessionStorage.removeItem('template');
+
+  </script>
+
 {% endblock %}
