--- a/heat_dashboard/content/stacks/templates/stacks/_change_template.html
+++ b/heat_dashboard/content/stacks/templates/stacks/_change_template.html
@@ -3,5 +3,6 @@
 {% block form_attrs %}enctype="multipart/form-data"{% endblock %}
 {% block modal-body-right %}
   <h3>{% trans "Description:" %}</h3>
+  <p>{% trans "A template is used to automate the deployment of infrastructure, services, and applications." %}</p>
   <p>{% trans "Use one of the available template source options to specify the template to be used in creating this stack." %}</p>
 {% endblock %}
