Delete settings import STATIC_URL
Delete import STATIC_URL in enabled settings.
Delete unnecessary css files.
Switch to scss instead of css.

Change-Id: I9b05888d35543ec166a905270f02de110cadbfac
Closes-Bug: #1752527

--- a/heat_dashboard/static/dashboard/project/heat_dashboard/template_generator/css/vis.scss
+++ b/heat_dashboard/static/dashboard/project/heat_dashboard/template_generator/css/vis.scss
@@ -638,7 +638,7 @@ div.vis-network div.vis-close {
 
   background-position: 20px 3px;
   background-repeat: no-repeat;
-  background-image: url("img/network/cross.png");
+  background-image: url("../project/heat_dashboard/template_generator/css/img/network/cross.png");
   cursor: pointer;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
@@ -685,7 +685,7 @@ div.vis-network div.vis-manipulation div.vis-button:active {
 }
 
 div.vis-network div.vis-manipulation div.vis-button.vis-back {
-  background-image: url("img/network/backIcon.png");
+  background-image: url("../project/heat_dashboard/template_generator/css/img/network/backIcon.png");
 }
 
 div.vis-network div.vis-manipulation div.vis-button.vis-none:hover {
@@ -704,12 +704,12 @@ div.vis-network div.vis-manipulation div.notification {
 }
 
 div.vis-network div.vis-manipulation div.vis-button.vis-add {
-  background-image: url("img/network/addNodeIcon.png");
+  background-image: url("../project/heat_dashboard/template_generator/css/img/network/addNodeIcon.png");
 }
 
 div.vis-network div.vis-manipulation div.vis-button.vis-edit,
 div.vis-network div.vis-edit-mode div.vis-button.vis-edit {
-  background-image: url("img/network/editIcon.png");
+  background-image: url("../project/heat_dashboard/template_generator/css/img/network/editIcon.png");
 }
 
 div.vis-network div.vis-edit-mode div.vis-button.vis-edit.vis-edit-mode {
@@ -718,11 +718,11 @@ div.vis-network div.vis-edit-mode div.vis-button.vis-edit.vis-edit-mode {
 }
 
 div.vis-network div.vis-manipulation div.vis-button.vis-connect {
-  background-image: url("img/network/connectIcon.png");
+  background-image: url("../project/heat_dashboard/template_generator/css/img/network/connectIcon.png");
 }
 
 div.vis-network div.vis-manipulation div.vis-button.vis-delete {
-  background-image: url("img/network/deleteIcon.png");
+  background-image: url("../project/heat_dashboard/template_generator/css/img/network/deleteIcon.png");
 }
 /* top right bottom left */
 div.vis-network div.vis-manipulation div.vis-label,
