Modified typo on Change Stack's pop-up Window.
In stack update's pop-up window, the description and form help text is
still using creation, not updating. That's not good.

Change-Id: I81c839f52918da276125f377ea829c3da8b3c4a8
Task: #18912
Story: #1767266

--- a/heat_dashboard/content/stacks/templates/stacks/_change_template.html
+++ b/heat_dashboard/content/stacks/templates/stacks/_change_template.html
@@ -4,5 +4,5 @@
 {% block modal-body-right %}
   <h3>{% trans "Description:" %}</h3>
   <p>{% trans "A template is used to automate the deployment of infrastructure, services, and applications." %}</p>
-  <p>{% trans "Use one of the available template source options to specify the template to be used in creating this stack." %}</p>
+  <p>{% trans "Use one of the available template source options to specify the template to be used in changing this stack." %}</p>
 {% endblock %}
