Group resource icons by project
Change-Id: I1266a931feff7bb969f0ac752a62cbe4e47f863f
Story: 2002668
Task: 22485

--- a/heat_dashboard/static/dashboard/project/heat_dashboard/template_generator/css/hotgen.scss
+++ b/heat_dashboard/static/dashboard/project/heat_dashboard/template_generator/css/hotgen.scss
@@ -169,3 +169,14 @@ md-icon.spinner{
     overflow: auto;
     max-height: 500px;
 }
+.md-nav-bar {
+    border-style: none;
+    border-width: 0 0;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.navbar-content{
+    margin-top: 3%;
+    text-align: center;
+}
