--- a/heat_dashboard/content/template_generator/templates/template_generator/index.html
+++ b/heat_dashboard/content/template_generator/templates/template_generator/index.html
@@ -77,16 +77,27 @@
             </div>
         </div>
 
-        <div class="row table_action">
+        <div class="row">
 
             <span flex></span>
 
             <!-- Icon Drag sidebar -->
-            <div class="col-sm-11" style="text-align:center" ng-controller="horizon.dashboard.project.heat_dashboard.template_generator.IconController">
-               <div draggable ng-repeat="(reskey, resobj) in resource_types" class="os-resource" draggable="true" id="{$ reskey $}" ng-if="admin || !resource_admin[reskey]">
-                   <md-tooltip md-direction="top" style="font-size:12px !important;">{$ resobj.name $}</md-tooltip>
-                   <md-icon style="height: 36px; width: 36px;" md-svg-src="{$ basePath $}js/resources/{$ reskey|lowercase $}/{$ reskey|lowercase $}.svg"></md-icon>
-               </div>
+            <div class="col-sm-10" ng-controller="horizon.dashboard.project.heat_dashboard.template_generator.IconController" >
+                <md-nav-bar md-selected-nav-item="currentNavItem" nav-bar-aria-label="Icon Group Nav">
+                  <md-nav-item md-nav-click="showIcon()" ng-repeat="(level, level_item) in project_types" name="{$ level $}">
+                    {$ level $}
+                  </md-nav-item>
+                </md-nav-bar>
+                <div class="navbar-content">
+                    <div ng-repeat="(level, level_item) in project_types" >
+                      <div ng-show="level == currentNavItem">
+                        <div draggable ng-repeat="(reskey, resobj) in level_item" class="os-resource" draggable="true" id="{$ reskey $}" ng-if="admin || !resource_admin[reskey]">
+                            <md-tooltip md-direction="top" style="font-size:12px !important;">{$ resobj.name $}</md-tooltip>
+                            <md-icon style="height: 36px; width: 36px;" md-svg-src="{$ basePath $}js/resources/{$ reskey|lowercase $}/{$ reskey|lowercase $}.svg"></md-icon>
+                        </div>
+                      </div>
+                    </div>
+                </div>
             </div>
             <!-- End Drag sidebar -->
         </div>
